# axum-starter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  validate-dependabot-build.yml
migrations/2025-07-29-003519_create_hello/: down.sql  up.sql
migrations/2025-07-29-005921_create_user/: up.sql
src/: main.rs
src/base/: controller.rs  service.rs
src/hello/: controller.rs  model.rs  schema.rs  service.rs
src/user/: controller.rs  mod.rs  model.rs  schema.rs  service.rs
