[package]
name = "axum-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
diesel = { version = "2.2.0", features = ["mysql"] }
deadpool-diesel = { version = "0.6.1", features = ["mysql"] } 
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
